--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ distro==1.9.0
 Flask==3.0.3
 frozenlist==1.4.1
 git-filter-repo==2.45.0
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
@@ -25,14 +26,16 @@ jiter==0.5.0
 MarkupSafe==2.1.5
 multidict==6.0.5
 openai==0.28.0
+packaging==24.1
 pydantic==2.8.2
 pydantic_core==2.20.1
+python-dotenv==1.0.1
 requests==2.32.3
 sniffio==1.3.1
 soupsieve==2.6
 tqdm==4.66.5
 typing_extensions==4.12.2
 urllib3==2.2.2
+waitress==3.0.0
 Werkzeug==3.0.4
 yarl==1.9.4
-gunicorn
